--- a/HDGLwms/IEMS.WMS/1.Presentations/IEMS.JHWMS.WebSite/config/SqlMap.01.config
+++ b/HDGLwms/IEMS.WMS/1.Presentations/IEMS.JHWMS.WebSite/config/SqlMap.01.config
@@ -2,10 +2,10 @@
 <sqlMapConfig xmlns="http://ibatis.apache.org/dataMapper"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
   <properties>
-    <property key="datasource" value="192.168.31.196" />
+    <property key="datasource" value="." />
     <property key="database" value="HDGLASRS" />
     <property key="userid" value="sa" />
-    <property key="password" value="mesnac" />
+    <property key="password" value="mesnac@123" />
   </properties>
   
   <settings>
